# crm5_bo

./: .gitignore  .pylintrc  README.md  pyproject.toml
src/crm5_bo/: __init__.py  crm5_bo.py  env_example
