[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm5_bo_dmcken"
version = "0.0.1"
authors = [
  { name="David Mc Ken", email="david.mcken@codepro.guru" },
]
description = "CRM 5 BackOffice Admin API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "python-dotenv",
  "requests",
]

[project.urls]
Homepage = "https://github.com/dmcken/crm5_bo"
Issues = "https://github.com/dmcken/crm5_bo/issues"
