[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crm5_bo"
dynamic = ["version"]
authors = [
  { name="David Mc Ken", email="david.mcken@codepro.guru" },
]
description = "CRM 5 BackOffice Admin API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dependencies = [
  "python-dotenv",
  "requests",
]

[tool.hatch.version]
path = "src/crm5_bo/__init__.py"

[project.urls]
Homepage = "https://github.com/dmcken/crm5_bo"
Issues = "https://github.com/dmcken/crm5_bo/issues"
